Options take precedence over JVM args